immich/gateway.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homelab-https-route
spec:
  parentRefs:
  - name: homelab-gateway
    sectionName: https
    namespace: gateway
  
  hostnames:
  - "immich.nauvis.lan" 
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: immich-helm-server
      port: 2283
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homelab-wan-https-route
spec:
  parentRefs:
  - name: homelab-wan-gateway
    sectionName: https
    namespace: gateway
  
  hostnames:
  - "photos.pieter.fish" 
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /share/
    - path:
        type: PathPrefix
        value: /_app/
    - path:
        type: PathPrefix
        value: /api/shared-links/
    - path:
        type: PathPrefix
        value: /api/albums/
      method: GET
    - path:
        type: PathPrefix
        value: /api/timeline/
    - path:
        type: PathPrefix
        value: /api/assets/
      method: GET
    - path:
        type: Exact
        value: /api/assets
      method: POST
    - path:
        type: Exact
        value: /api/server/config
    - path:
        type: Exact
        value: /api/server/media-types
    - path:
        type: Exact
        value: /api/server/features
    - path:
        type: Exact
        value: /favicon-16.png
    - path:
        type: Exact
        value: /apple-icon-180.png
    - path:
        type: Exact
        value: /manifest.json
    - path:
        type: Exact
        value: /custom.css
    - path:
        type: Exact
        value: /service-worker.js
    - path:
        type: Exact
        value: /dark_skeleton.png
    - path:
        type: Exact
        value: /light_skeleton.png
    backendRefs:
    - name: immich-helm-server
      port: 2283
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homelab-priv-wan-https-route
spec:
  parentRefs:
  - name: homelab-priv-wan-gateway
    sectionName: https
    namespace: gateway
  
  hostnames:
  - "photos.pieter.fish" 
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: immich-helm-server
      port: 2283
